# libai5

./: .gitmodules  README.md  meson.build
include/ai5/: a6.h  anim.h  arc.h  ccd.h  cg.h  game.h  lzss.h  mes.h  s4.h
src/: a6.c  anim.c  ccd.c  game.c  lzss.c  s4.c
src/arc/: open.c
src/cg/: akb.c  cg.c  g16_24_32.c  gcc.c  gp4.c  gp8.c  gpr.c  gpx.c  png.c
src/mes/: codes.c  parse.c  parse_aiw.c  print.c  print_aiw.c  system.c
